2008-08-11  Heikki Junnila  <hjunnila@users.sf.net>

	* README:
	* TODO:
	* fixtureeditor/fixtureeditor.pro:
	* libs/common/common.pro:
	* main/main.pro:

	Updated QT version requirement in README.
	Updated TODO list.
	Updated VERSION tags to common lib & both apps' project files.

2008-08-10  Heikki Junnila  <hjunnila@users.sf.net>

	* libs/common/qlcinplugin.h:
	* libs/hidinput/hideventdevice.cpp:
	* libs/hidinput/hidinput.cpp:
	* libs/hidinput/hidinput.h:
	* main/inputmap.cpp:
	* main/inputmap.h:

	Created route for data from input plugins to input map.

2008-08-09  Heikki Junnila  <hjunnila@users.sf.net>

	* libs/common/qlcinplugin.h:
	* libs/hidinput/configurehidinput.cpp:
	* libs/hidinput/hiddevice.cpp:
	* libs/hidinput/hiddevice.h:
	* libs/hidinput/hideventdevice.cpp:
	* libs/hidinput/hideventdevice.h:
	* libs/hidinput/hidinput.cpp:
	* libs/hidinput/hidinput.h:
	* libs/hidinput/hidpoller.cpp:
	* libs/hidinput/hidpoller.h:
	* main/inputmap.cpp:

	Fixed a crash with HID plugin during app shutdown.
	Refactored input plugin construct/destruct scheme.
	
2008-08-09  Heikki Junnila  <hjunnila@users.sf.net>

	* libs/hidinput/configurehidinput.cpp:
	* libs/hidinput/configurehidinput.h:
	* libs/hidinput/hiddevice.h:
	* libs/hidinput/hideventdevice.cpp:
	* libs/hidinput/hideventdevice.h:
	* libs/hidinput/hidinput.cpp:
	* libs/hidinput/hidinput.h:

	Changed HID plugin to open/close devices on demand.

2008-08-09  Heikki Junnila  <hjunnila@users.sf.net>

	* libs/hidinput/hiddevice.h:
	* libs/hidinput/hideventdevice.cpp:
	* libs/hidinput/hideventdevice.h:
	* libs/hidinput/hidinput.cpp:
	* libs/hidinput/hidinput.h:
	* libs/hidinput/hidpoller.cpp:
	* libs/hidinput/hidpoller.h:

	Continued on the HID input plugin.
	
2008-08-08  Heikki Junnila  <hjunnila@users.sf.net>

	* main/chasereditor.cpp:
	* main/collectioneditor.cpp:
	* main/fixtureselection.ui:
	* main/function.h:
	* main/functionselection.cpp:
	* main/functionselection.h:
	* main/functionselection.ui: